[package]
name = "mc-creation-date"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {git = "https://github.com/tokio-rs/tokio" }
tokio-tcp = {git = "https://github.com/tokio-rs/tokio", features = ["incoming"] } 
hyper = "0.12.32"
hyper-tls = "0.3.2"
futures-preview = { version = "0.3.0-alpha.17", features = ["async-await", "nightly", "compat"] }
futures01 = { package = "futures", version = "0.1.28" }
uuid = { version = "0.7.4", features = ["serde"] }
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
base64-serde = "0.3.2"
base64 = "0.10.1"
reqwest = "0.9.18"
env_logger = "0.6.2"
chrono = "0.4.7"
failure = "0.1.5"
